[RCP-265] :recycle: 서비스 로직을 responseDto를 사용하는것으로 변경하고 테스트를 수정함