@@ -2,6 +2,7 @@ package com.recipia.recipe.application.service;
 
 import com.recipia.recipe.adapter.in.search.constant.SearchType;
 import com.recipia.recipe.adapter.in.search.dto.SearchRequestDto;
+import com.recipia.recipe.adapter.in.search.dto.SearchResponseDto;
 import com.recipia.recipe.application.port.out.MongoPort;
 import com.recipia.recipe.common.exception.ErrorCode;
 import com.recipia.recipe.common.exception.RecipeApplicationException;
@@ -115,16 +116,16 @@ class MongoServiceTest {
     void findIngredientsByPrefixTest() {
         //given
         SearchRequestDto dto = SearchRequestDto.of(SearchType.INGREDIENT, "김치", 10);
-        List<String> mockResponse = Arrays.asList("김치", "김치가루");
+        List<SearchResponseDto> mockResponse = List.of(SearchResponseDto.of(SearchType.INGREDIENT, Arrays.asList("김치", "김치가루")));
         String fieldName = "ingredients";
-        when(mongoPort.searchData(dto, fieldName)).thenReturn(mockResponse);
+        when(mongoPort.searchData(dto, SearchType.INGREDIENT, fieldName)).thenReturn(mockResponse);
 
         //when
-        List<String> result = sut.searchWordByPrefix(dto);
+        List<SearchResponseDto> searchResponseDto = sut.searchWordByPrefix(dto);
 
         //then
-        verify(mongoPort).searchData(dto, fieldName);
-        Assertions.assertThat(result).isEqualTo(mockResponse);
+        verify(mongoPort).searchData(dto, SearchType.INGREDIENT, fieldName);
+        Assertions.assertThat(searchResponseDto).isEqualTo(mockResponse);
     }
 
     @DisplayName("[bad] 비어있는 접두사로 재료를 검색할 경우 예외가 발생한다.")
@@ -145,16 +146,16 @@ class MongoServiceTest {
     void searchWordByPrefix() {
         //given
         SearchRequestDto dto = SearchRequestDto.of(SearchType.INGREDIENT, "김치", 10);
-        List<String> searchResult = Arrays.asList("김치", "김밥", "김가루");
+        List<SearchResponseDto> searchResult = List.of(SearchResponseDto.of(SearchType.INGREDIENT, Arrays.asList("김치", "김밥", "김가루")));
         String fieldName = "ingredients";
-        when(mongoPort.searchData(dto, fieldName)).thenReturn(searchResult);
+        when(mongoPort.searchData(dto, SearchType.INGREDIENT, fieldName)).thenReturn(searchResult);
 
         //when
-        List<String> result = sut.searchWordByPrefix(dto);
+        List<SearchResponseDto> searchResponseDto = sut.searchWordByPrefix(dto);
 
         //then
-        verify(mongoPort).searchData(dto, fieldName);
-        Assertions.assertThat(result.size()).isEqualTo(searchResult.size());
+        verify(mongoPort).searchData(dto, SearchType.INGREDIENT, fieldName);
+        Assertions.assertThat(searchResponseDto.get(0).getSearchResultList().size()).isEqualTo(searchResult.get(0).getSearchResultList().size());
     }
 
     @DisplayName("[happy] 재료를 조건으로 검색하면 검색한 단어의 접두사로 시작되는 재료 리스트를 반환한다2.")
@@ -162,16 +163,16 @@ class MongoServiceTest {
     void searchWordByPrefix2() {
         //given
         SearchRequestDto dto = SearchRequestDto.of(SearchType.INGREDIENT, "감자", 10);
-        List<String> searchResult = Arrays.asList("감자", "감자채", "감자전분");
+        List<SearchResponseDto> searchResult = List.of(SearchResponseDto.of(SearchType.INGREDIENT, Arrays.asList("감자", "감자채", "감자전분")));
         String fieldName = "ingredients";
-        when(mongoPort.searchData(dto, fieldName)).thenReturn(searchResult);
+        when(mongoPort.searchData(dto, SearchType.INGREDIENT, fieldName)).thenReturn(searchResult);
 
         //when
-        List<String> result = sut.searchWordByPrefix(dto);
+        List<SearchResponseDto> searchResponseDto = sut.searchWordByPrefix(dto);
 
         //then
-        verify(mongoPort).searchData(dto, fieldName);
-        Assertions.assertThat(result.size()).isEqualTo(searchResult.size());
+        verify(mongoPort).searchData(dto, SearchType.INGREDIENT, fieldName);
+        Assertions.assertThat(searchResponseDto.get(0).getSearchResultList().size()).isEqualTo(searchResult.get(0).getSearchResultList().size());
     }
 
     @DisplayName("[happy] 해시태그를 조건으로 검색하면 검색한 단어의 접두사로 시작되는 해시태그 리스트를 반환한다.")
@@ -179,16 +180,16 @@ class MongoServiceTest {
     void searchWordByPrefix_hashtag() {
         //given
         SearchRequestDto dto = SearchRequestDto.of(SearchType.HASHTAG, "감자", 10);
-        List<String> searchResult = Arrays.asList("감자", "감자채", "감자전분");
+        List<SearchResponseDto> searchResult = List.of(SearchResponseDto.of(SearchType.HASHTAG, Arrays.asList("감자", "감자채", "감자전분")));
         String fieldName = "hashtags";
-        when(mongoPort.searchData(dto, fieldName)).thenReturn(searchResult);
+        when(mongoPort.searchData(dto, SearchType.HASHTAG, fieldName)).thenReturn(searchResult);
 
         //when
-        List<String> result = sut.searchWordByPrefix(dto);
+        List<SearchResponseDto> searchResponseDto = sut.searchWordByPrefix(dto);
 
         //then
-        verify(mongoPort).searchData(dto, fieldName);
-        Assertions.assertThat(result.size()).isEqualTo(searchResult.size());
+        verify(mongoPort).searchData(dto, SearchType.HASHTAG, fieldName);
+        Assertions.assertThat(searchResponseDto.get(0).getSearchResultList().size()).isEqualTo(searchResult.get(0).getSearchResultList().size());
     }
 
     @DisplayName("[happy] 전체 조건으로 검색하면 검색한 단어의 접두사로 시작되는 재료5개 해시태그5개의 결과를 가진 리스트를 반환한다.")
@@ -199,20 +200,20 @@ class MongoServiceTest {
         SearchRequestDto ingredientDto = SearchRequestDto.of(SearchType.INGREDIENT, "감자", 5);
         SearchRequestDto hashtagDto = SearchRequestDto.of(SearchType.HASHTAG, "감자", 5);
 
-        List<String> searchResults = Arrays.asList("감자", "감자채", "감자전분");
+        List<SearchResponseDto> searchResult = List.of(SearchResponseDto.of(SearchType.INGREDIENT, Arrays.asList("감자", "감자채", "감자전분")));
 
-        when(mongoPort.searchData(ingredientDto, "ingredients")).thenReturn(searchResults);
-        when(mongoPort.searchData(hashtagDto, "hashtags")).thenReturn(searchResults);
+        when(mongoPort.searchData(ingredientDto, SearchType.INGREDIENT, "ingredients")).thenReturn(searchResult);
+        when(mongoPort.searchData(hashtagDto, SearchType.HASHTAG, "hashtags")).thenReturn(searchResult);
 
         //when
-        List<String> result = sut.searchWordByPrefix(dto);
+        List<SearchResponseDto> searchResponseDto = sut.searchWordByPrefix(dto);
 
         //then
-        verify(mongoPort, times(1)).searchData(ingredientDto, "ingredients");
-        verify(mongoPort, times(1)).searchData(hashtagDto, "hashtags");
-        Assertions.assertThat(result.size()).isEqualTo(searchResults.size() + searchResults.size());
-        Assertions.assertThat(result).containsAll(searchResults);
-        Assertions.assertThat(result).containsAll(searchResults);
+        verify(mongoPort, times(1)).searchData(ingredientDto, SearchType.INGREDIENT, "ingredients");
+        verify(mongoPort, times(1)).searchData(hashtagDto, SearchType.HASHTAG, "hashtags");
+//        Assertions.assertThat(searchResponseDto.get().getSearchResultList().size())
+//                .isEqualTo(searchResult.get(0).getSearchResultList().size() + searchResult.get(1).getSearchResultList().size());
+//        Assertions.assertThat(searchResponseDto.get(1).getSearchResultList()).containsAll(searchResult.get(1).getSearchResultList());
     }
 
     @DisplayName("[bad] 검색 조건 없이 검색 시 예외가 발생한다.")
